<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgRes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imgRes"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/outsideLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/restaurant" />

    <LinearLayout
        android:id="@+id/outsideLayout"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRes">


        <LinearLayout
            android:id="@+id/layoutResBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/lblResBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nameLblRestaurantBill"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputResBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hintCurrencyValue"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hintCurrencyValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNumPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNoPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hintNoOfGuests"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputNoOfGuests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hintNoOfGuestVal"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hintNoOfGuestVal"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTipOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/txtLblTips"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnTipOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:entries="@array/tipOptions"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTotalBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTotalBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtTotalBill"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTotalBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/txtTotalBillVal"
                android:gravity="center_horizontal"
                android:hint="@string/txtTotalBillVal"
                android:inputType="numberDecimal"
                android:text="@string/txtTotalBillVal"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSplitBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:text="@string/lblIndividual"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layoutIndividualBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblIndiBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblIndiBill"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtIndiBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hintCurrencyValue"
                android:gravity="center_horizontal"
                android:hint="@string/hintCurrencyValue"
                android:inputType="numberDecimal"
                android:text="@string/txtIndiBill"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutIndividualTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblIndiTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblIndiTip"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtIndiTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hintCurrencyValue"
                android:gravity="center_horizontal"
                android:hint="@string/hintCurrencyValue"
                android:inputType="numberDecimal"
                android:text="@string/txtIndiTip"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutIndividualTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblIndiTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblIndiTotal"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtIndiTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hintCurrencyValue"
                android:gravity="center_horizontal"
                android:hint="@string/hintCurrencyValue"
                android:inputType="numberDecimal"
                android:text="@string/txtIndiTotal"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/lblThankYou"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/lblThankyou"
            android:textStyle="italic" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>